# pheeno_ros

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
arduino/AccelerometerGyroCalibration/: AccelerometerGyroCalibration.ino
arduino/ArduinoLibraries/PheenoV2Basic/: PheenoV2Basic.cpp  PheenoV2Basic.h  keywords.txt
arduino/ArduinoLibraries/PheenoV2Basic/examples/: ReadME.txt
arduino/ArduinoLibraries/PheenoV2Basic/examples/OpenLoopMotionExample/: OpenLoopMotionExample.ino
arduino/ArduinoLibraries/PheenoV2Basic/examples/PIDMotorControlExample/: PIDMotorControlExample.ino
arduino/ArduinoLibraries/PheenoV2Basic/examples/RandomWalkExample/: RandomWalkExample.ino
arduino/ArduinoLibraries/PheenoV2Basic/examples/RandomWalkObstacleAvoidExample/: RandomWalkObstacleAvoidExample.ino
arduino/ArduinoLibraries/PheenoV2Basic/examples/SerialPrintSensors/: SerialPrintSensors.ino
arduino/ArduinoLibraries/PheenoV2Basic/examples/WayPointEncoders/: WayPointEncoders.ino
arduino/ArduinoLibraries/PheenoV2Basic/examples/WayPointSensorFusion/: WayPointSensorFusion.ino
arduino/MagnetometerCalibration/: MagnetometerCalibration.ino
arduino/PheenoROS/: PheenoROS.ino  PheenoROS_PID.ino
arduino/RandomWalkObstacleAvoid/: RandomWalkObstacleAvoid.ino
config/: pheeno_params.yaml
include/: pheeno_robot.h  sensor_listener.h
include/pheeno_ros/: command_line_parser.h  pheeno_robot.h
launch/: pheeno_obstacle_avoidance.launch  pheeno_obstacle_avoidance_with_camera.launch  pheeno_random_walk.launch  pheeno_random_walk_with_camera.launch
scripts/: obstacle_avoidance.py  pheeno_robot.py  pi_cam_node.py  random_walk.py  read_sensor_values.py  ros_install_script
scripts/pheeno_ros/: pheeno_robot.py
src/: .pheeno_robot.cpp.swp  command_line_parser.cpp  obstacle_avoidance.cpp  obstacle_avoidance.py  pheeno_robot.cpp  pheeno_robot.h  pi_cam_node.py  random_walk.cpp  random_walk.py  raspicam_ros_pub.cpp  read_encoder_values.py  read_sensor_values.py  sensor_listener.cpp  set_ros_master.py  setup_pheeno_ros.py
